--- a/src/html/index.html
+++ b/src/html/index.html
@@ -25,8 +25,11 @@
   <![endif]-->
 
   <!-- build:head -->
-  
+  <header class="comm-header">
+  我是头部
+</header>
   <!-- endbuild -->
+
   <div class="wrap">
     
   </div>
