--- a/src/html/login.html
+++ b/src/html/login.html
@@ -28,9 +28,16 @@
   <!--[if lte IE 9]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
-  <div class="login-hd">
-
-  </div>
+  <header class="comm-header">
+    <div class="midd_header clearfix">
+        <div class="index_icon">
+            <a href="index.html"></a>
+        </div>
+        <div class="login">
+            <a href="#">个人中心</a>
+        </div>
+    </div>
+</header>
   <div class="wrap">
     <div class="main">
       <div class="login-body">
