--- a/src/html/index.html
+++ b/src/html/index.html
@@ -51,7 +51,7 @@
             </div>
         </header>
 
-        <div class="main">
+        <div class="body">
             <div class="user_info">
                 <ul>
                     <li>
