--- a/src/html/index.html
+++ b/src/html/index.html
@@ -25,30 +25,35 @@
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
   <div class="wrap">
-    <header class="comm-header">
-      <div class="midd_header clearfix">
-        <div class="index_icon">
-          <a href="index.html"></a>
-        </div>
-        <ul class="nav clearfix">
-          <li>
-            <a href="#">课程中心</a>
-          </li>
-          <li>
-            <a href="#">我的班级</a>
-          </li>
-          <li>
-            <a href="#">排行榜</a>
-          </li>
-          <li>
-            <a href="#">学币商城</a>
-          </li>
-        </ul>
-        <div class="login">
-          <a href="#">个人中心</a>
-        </div>
+    <!-- build:head -->
+    
+  <header class="comm-header">
+    <div class="midd_header clearfix">
+      <div class="index_icon">
+        <a href="index.html"></a>
       </div>
-    </header>
+      <ul class="nav clearfix">
+        <li class="active">
+          <a href="#">课程中心</a>
+        </li>
+        <li>
+          <a href="#">我的班级</a>
+        </li>
+        <li>
+          <a href="#">排行榜</a>
+        </li>
+        <li>
+          <a href="#">学币商城</a>
+        </li>
+      </ul>
+      <div class="login">
+        <a href="#">个人中心</a>
+      </div>
+    </div>
+  </header>
+
+    <!-- endbuild -->
+
 
     <div class="body">
       <div class="user_info">
@@ -1212,6 +1217,25 @@
       </div>
     </div>
   </div>
+  <!-- build:foot -->
+    <!-- 底部 -->
+  <div class="footer">
+    <div class="footer-ct">
+      <div class="tel-wp">
+        <img src="../img/logo.png" alt="" class="logo">
+        <img src="../img/tel.png" alt="" class="foot-tel">021-00000000
+      </div>
+      <p class="ads-wp">
+        <span class="name">上海XXXXXXXXXXXXXXXXXXX有限公司</span>
+        <span class="ads">地址：上海XXXXXXXXXXXXXXXXXXX</span>
+      </p>
+      <p class="record">智厢逢智能英语版权所有 © 备案号备案号备案号备案号</p>
+    </div>
+  </div>
+  <!-- endbuild -->
+
+
+
   <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
   <script src="/js/main_momo.js"></script>
 </body>
