--- a/src/html/part/head.html
+++ b/src/html/part/head.html
@@ -1,24 +1,25 @@
-<header class="comm-header">
+
+  <header class="comm-header">
     <div class="midd_header clearfix">
-        <div class="index_icon">
-            <a href="index.html"></a>
-        </div>
-        <ul class="nav clearfix">
-            <li>
-                <a href="#">课程中心</a>
-            </li>
-            <li>
-                <a href="#">我的班级</a>
-            </li>
-            <li>
-                <a href="#">排行榜</a>
-            </li>
-            <li>
-                <a href="#">学币商城</a>
-            </li>
-        </ul>
-        <div class="login">
-            <a href="#">个人中心</a>
-        </div>
+      <div class="index_icon">
+        <a href="index.html"></a>
+      </div>
+      <ul class="nav clearfix">
+        <li class="active">
+          <a href="#">课程中心</a>
+        </li>
+        <li>
+          <a href="#">我的班级</a>
+        </li>
+        <li>
+          <a href="#">排行榜</a>
+        </li>
+        <li>
+          <a href="#">学币商城</a>
+        </li>
+      </ul>
+      <div class="login">
+        <a href="#">个人中心</a>
+      </div>
     </div>
-</header>
+  </header>
