--- a/src/html/页面编号_模板取名.html
+++ b/src/html/页面编号_模板取名.html
@@ -23,8 +23,8 @@
   <!-- 第一步：
      默认引入normalize.css和style.css、
      请在 main_你的名称简写.less 里面写css代码,会自动编译到css文件夹下,不要新建css！  -->
-  <link rel="stylesheet" href="/css/normalize.css">
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="../css/normalize.css">
+  <link rel="stylesheet" href="../css/style.css">
 </head>
 <!-- 第二步：
   	 请给body设置一个class,建议设置为你的名字简写+页面名,每次都要唯一 -->
@@ -46,7 +46,7 @@
 			 默认引入JQuery.js、
 			 请在main_你的名称简写.js里面写js代码  -->
   <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
-  <script src="/js/main_你的名称简写.js"></script>
+  <script src="../js/main_你的名称简写.js"></script>
 </body>
 
 </html>
