--- a/src/html/03_index.html
+++ b/src/html/03_index.html
@@ -16,8 +16,8 @@
   <meta content="telephone=no, address=no" name="format-detection">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-  <link rel="stylesheet" href="/css/normalize.css">
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="../css/normalize.css">
+  <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body class="momo_index">
@@ -1237,7 +1237,7 @@
 
 
   <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
-  <script src="/js/main_momo.js"></script>
+  <script src="../js/main_momo.js"></script>
 </body>
 
 </html>
