--- a/src/html/10_test.html
+++ b/src/html/10_test.html
@@ -79,7 +79,9 @@
                   <td>2018-01-01 22:22:22</td>
                   <td>未通过</td>
                   <td>90</td>
-                  <td>再次测试</td>
+                  <td>
+                    <span class="table-btn">再次测试</span>
+                  </td>
                 </tr>
                 <tr>
                   <td>冲刺真题</td>
@@ -87,7 +89,9 @@
                   <td>2018-01-01 22:22:22</td>
                   <td>通过</td>
                   <td>120</td>
-                  <td>再次测试</td>
+                  <td>
+                    <span class="table-btn">再次测试</span>
+                  </td>
                 </tr>
                 <tr>
                   <td>同步课程</td>
@@ -95,7 +99,9 @@
                   <td>2018-01-01 22:22:22</td>
                   <td>通过</td>
                   <td>120</td>
-                  <td>再次测试</td>
+                  <td>
+                    <span class="table-btn">再次测试</span>
+                  </td>
                 </tr>
                 <tr>
                   <td>搞定语法</td>
@@ -103,7 +109,9 @@
                   <td>2018-01-01 22:22:22</td>
                   <td>未通过</td>
                   <td>90</td>
-                  <td>再次测试</td>
+                  <td>
+                    <span class="table-btn">再次测试</span>
+                  </td>
                 </tr>
                 <tr>
                   <td>冲刺真题</td>
@@ -111,7 +119,9 @@
                   <td>2018-01-01 22:22:22</td>
                   <td>通过</td>
                   <td>120</td>
-                  <td>再次测试</td>
+                  <td>
+                    <span class="table-btn">再次测试</span>
+                  </td>
                 </tr>
               </tbody>
             </table>
@@ -174,7 +184,9 @@
                   <td>2018-01-01 22:22:22</td>
                   <td>未通过</td>
                   <td>90</td>
-                  <td>再次测试</td>
+                  <td>
+                    <span class="table-btn">再次测试</span>
+                  </td>
                 </tr>
                 <tr>
                   <td>冲刺真题</td>
@@ -182,7 +194,9 @@
                   <td>2018-01-01 22:22:22</td>
                   <td>通过</td>
                   <td>120</td>
-                  <td>再次测试</td>
+                  <td>
+                    <span class="table-btn">再次测试</span>
+                  </td>
                 </tr>
                 <tr>
                   <td>同步课程</td>
@@ -190,7 +204,9 @@
                   <td>2018-01-01 22:22:22</td>
                   <td>通过</td>
                   <td>120</td>
-                  <td>再次测试</td>
+                  <td>
+                    <span class="table-btn">再次测试</span>
+                  </td>
                 </tr>
                 <tr>
                   <td>搞定语法</td>
@@ -198,7 +214,9 @@
                   <td>2018-01-01 22:22:22</td>
                   <td>未通过</td>
                   <td>90</td>
-                  <td>再次测试</td>
+                  <td>
+                    <span class="table-btn">再次测试</span>
+                  </td>
                 </tr>
                 <tr>
                   <td>冲刺真题</td>
@@ -206,7 +224,9 @@
                   <td>2018-01-01 22:22:22</td>
                   <td>通过</td>
                   <td>120</td>
-                  <td>再次测试</td>
+                  <td>
+                    <span class="table-btn">再次测试</span>
+                  </td>
                 </tr>
               </tbody>
             </table>
@@ -269,7 +289,9 @@
                   <td>2018-01-01 22:22:22</td>
                   <td>未通过</td>
                   <td>90</td>
-                  <td>再次测试</td>
+                  <td>
+                    <span class="table-btn">再次测试</span>
+                  </td>
                 </tr>
                 <tr>
                   <td>冲刺真题</td>
@@ -277,7 +299,9 @@
                   <td>2018-01-01 22:22:22</td>
                   <td>通过</td>
                   <td>120</td>
-                  <td>再次测试</td>
+                  <td>
+                    <span class="table-btn">再次测试</span>
+                  </td>
                 </tr>
                 <tr>
                   <td>同步课程</td>
@@ -285,7 +309,9 @@
                   <td>2018-01-01 22:22:22</td>
                   <td>通过</td>
                   <td>120</td>
-                  <td>再次测试</td>
+                  <td>
+                    <span class="table-btn">再次测试</span>
+                  </td>
                 </tr>
                 <tr>
                   <td>搞定语法</td>
@@ -293,7 +319,9 @@
                   <td>2018-01-01 22:22:22</td>
                   <td>未通过</td>
                   <td>90</td>
-                  <td>再次测试</td>
+                  <td>
+                    <span class="table-btn">再次测试</span>
+                  </td>
                 </tr>
                 <tr>
                   <td>冲刺真题</td>
@@ -301,7 +329,9 @@
                   <td>2018-01-01 22:22:22</td>
                   <td>通过</td>
                   <td>120</td>
-                  <td>再次测试</td>
+                  <td>
+                    <span class="table-btn">再次测试</span>
+                  </td>
                 </tr>
               </tbody>
             </table>
@@ -364,7 +394,9 @@
                   <td>2018-01-01 22:22:22</td>
                   <td>未通过</td>
                   <td>90</td>
-                  <td>再次测试</td>
+                  <td>
+                    <span class="table-btn">再次测试</span>
+                  </td>
                 </tr>
                 <tr>
                   <td>冲刺真题</td>
@@ -372,7 +404,9 @@
                   <td>2018-01-01 22:22:22</td>
                   <td>通过</td>
                   <td>120</td>
-                  <td>再次测试</td>
+                  <td>
+                    <span class="table-btn">再次测试</span>
+                  </td>
                 </tr>
                 <tr>
                   <td>同步课程</td>
@@ -380,7 +414,9 @@
                   <td>2018-01-01 22:22:22</td>
                   <td>通过</td>
                   <td>120</td>
-                  <td>再次测试</td>
+                  <td>
+                    <span class="table-btn">再次测试</span>
+                  </td>
                 </tr>
                 <tr>
                   <td>搞定语法</td>
@@ -388,7 +424,9 @@
                   <td>2018-01-01 22:22:22</td>
                   <td>未通过</td>
                   <td>90</td>
-                  <td>再次测试</td>
+                  <td>
+                    <span class="table-btn">再次测试</span>
+                  </td>
                 </tr>
                 <tr>
                   <td>冲刺真题</td>
@@ -396,7 +434,9 @@
                   <td>2018-01-01 22:22:22</td>
                   <td>通过</td>
                   <td>120</td>
-                  <td>再次测试</td>
+                  <td>
+                    <span class="table-btn">再次测试</span>
+                  </td>
                 </tr>
               </tbody>
             </table>
