--- a/src/html/sentence.html
+++ b/src/html/sentence.html
@@ -5,7 +5,7 @@
   <meta content="webkit" name="renderer" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta charset="UTF-8">
-  <title>同步课程-单词表</title>
+  <title>同步课程-句子册</title>
   <meta name="Keywords" content="">
   <meta name="Description" content="">
   <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
@@ -42,7 +42,7 @@
           <em class="line">/</em>
           <a class="link" href="javscript:;">同步课程</a>
           <em class="line">/</em>
-          <span>单词表</span>
+          <span>句子册</span>
         </div>
         <div class="xc-head">
           <div class="xc-head-top">
@@ -78,9 +78,8 @@
         <div class='xc-table-box'>
           <table class="xc-table">
             <thead>
-              <th style="width: 152px">序号</th>
-              <th style="width: 152px">音标</th>
-              <th style="width: 448px">单词
+              <th style="width: 100px">序号</th>
+              <th style="width: 350px">英文
                 <div class="table-switch active">
                   <div class="table-switch-warp">
                     <div class="table-switch-inner"></div>
@@ -88,86 +87,178 @@
                   隐藏全部
                 </div>
               </th>
-              <th style="width: 448px">词义
+              <th style="width: 350px">中文
                 <div class="table-switch">
                   <div class="table-switch-warp">
                     <div class="table-switch-inner"></div>
                   </div>
                   显示全部
-                </div></th>
+                </div>
+              </th>
+              <th style="width: 100px">序号</th>
+              <th style="width: 100px">录音</th>
+              <th style="width: 100px">得分</th>
+              <th style="width: 100px"><div class="position">
+                  最后一次<br/>录音时间
+              </div>
+              </th>
             </thead>
             <tbody>
               <tr>
                 <td>1</td>
-                <td>[w3:d]</td>
-                <td>word</td>
+                <td>How are you ？</td>
                 <td></td>
+                <td>
+                  <img class="table-img" src="../img/sentence-radio-active.png" alt="广播">
+                </td>
+                <td>
+                  <img class="table-img" src="../img/sentence-play-active.png" alt="播放">
+                </td>
+                <td>99</td>
+                <td>2018-06-06</td>
               </tr>
               <tr>
                 <td>2</td>
-                <td>[w3:d]</td>
-                <td>word</td>
+                <td>How are you ？</td>
                 <td></td>
+                <td>
+                  <img class="table-img" src="../img/sentence-radio.png" alt="广播">
+                </td>
+                <td>
+                  <img class="table-img" src="../img/sentence-play.png" alt="播放">
+                </td>
+                <td>99</td>
+                <td>2018-06-06</td>
               </tr>
               <tr>
                 <td>3</td>
-                <td>[w3:d]</td>
-                <td>word</td>
+                <td>How are you ？</td>
                 <td></td>
+                <td>
+                  <img class="table-img" src="../img/sentence-radio.png" alt="广播">
+                </td>
+                <td>
+                  <img class="table-img" src="../img/sentence-play.png" alt="播放">
+                </td>
+                <td>99</td>
+                <td>2018-06-06</td>
               </tr>
               <tr>
                 <td>4</td>
-                <td>[w3:d]</td>
-                <td>word</td>
+                <td>How are you ？</td>
                 <td></td>
+                <td>
+                  <img class="table-img" src="../img/sentence-radio.png" alt="广播">
+                </td>
+                <td>
+                  <img class="table-img" src="../img/sentence-play.png" alt="播放">
+                </td>
+                <td>99</td>
+                <td>2018-06-06</td>
               </tr>
               <tr>
                 <td>5</td>
-                <td>[w3:d]</td>
-                <td>word</td>
+                <td>How are you ？</td>
                 <td></td>
+                <td>
+                  <img class="table-img" src="../img/sentence-radio.png" alt="广播">
+                </td>
+                <td>
+                  <img class="table-img" src="../img/sentence-play.png" alt="播放">
+                </td>
+                <td>99</td>
+                <td>2018-06-06</td>
               </tr>
               <tr>
                 <td>6</td>
-                <td>[w3:d]</td>
-                <td>word</td>
+                <td>How are you ？</td>
                 <td></td>
+                <td>
+                  <img class="table-img" src="../img/sentence-radio.png" alt="广播">
+                </td>
+                <td>
+                  <img class="table-img" src="../img/sentence-play.png" alt="播放">
+                </td>
+                <td>99</td>
+                <td>2018-06-06</td>
               </tr>
               <tr>
                 <td>7</td>
-                <td>[w3:d]</td>
-                <td>word</td>
+                <td>How are you ？</td>
                 <td></td>
+                <td>
+                  <img class="table-img" src="../img/sentence-radio.png" alt="广播">
+                </td>
+                <td>
+                  <img class="table-img" src="../img/sentence-play.png" alt="播放">
+                </td>
+                <td>99</td>
+                <td>2018-06-06</td>
               </tr>
               <tr>
                 <td>8</td>
-                <td>[w3:d]</td>
-                <td>word</td>
+                <td>How are you ？</td>
                 <td></td>
+                <td>
+                  <img class="table-img" src="../img/sentence-radio.png" alt="广播">
+                </td>
+                <td>
+                  <img class="table-img" src="../img/sentence-play.png" alt="播放">
+                </td>
+                <td>99</td>
+                <td>2018-06-06</td>
               </tr>
               <tr>
                 <td>9</td>
-                <td>[w3:d]</td>
-                <td>word</td>
+                <td>How are you ？</td>
                 <td></td>
+                <td>
+                  <img class="table-img" src="../img/sentence-radio.png" alt="广播">
+                </td>
+                <td>
+                  <img class="table-img" src="../img/sentence-play.png" alt="播放">
+                </td>
+                <td>99</td>
+                <td>2018-06-06</td>
               </tr>
               <tr>
                 <td>10</td>
-                <td>[w3:d]</td>
-                <td>word</td>
+                <td>How are you ？</td>
                 <td></td>
+                <td>
+                  <img class="table-img" src="../img/sentence-radio.png" alt="广播">
+                </td>
+                <td>
+                  <img class="table-img" src="../img/sentence-play.png" alt="播放">
+                </td>
+                <td>99</td>
+                <td>2018-06-06</td>
               </tr>
               <tr>
                 <td>11</td>
-                <td>[w3:d]</td>
-                <td>word</td>
+                <td>How are you ？</td>
                 <td></td>
+                <td>
+                  <img class="table-img" src="../img/sentence-radio.png" alt="广播">
+                </td>
+                <td>
+                  <img class="table-img" src="../img/sentence-play.png" alt="播放">
+                </td>
+                <td>99</td>
+                <td>2018-06-06</td>
               </tr>
               <tr>
                 <td>12</td>
-                <td>[w3:d]</td>
-                <td>word</td>
+                <td>How are you ？</td>
                 <td></td>
+                <td>
+                  <img class="table-img" src="../img/sentence-radio.png" alt="广播">
+                </td>
+                <td>
+                  <img class="table-img" src="../img/sentence-play.png" alt="播放">
+                </td>
+                <td>99</td>
+                <td>2018-06-06</td>
               </tr>
             </tbody>
           </table>
