--- a/src/html/04_myclass.html
+++ b/src/html/04_myclass.html
@@ -87,6 +87,62 @@
             <td>上等兵</td>
             <td class="ranking">4</td>
           </tr>
+          <tr>
+            <td>
+              <img src="../img/class_photo.png" alt="" class="schoolmate">
+            </td>
+            <td>Qweiiadcv</td>
+            <td>
+              <span class="lv">LV 3</span>
+            </td>
+            <td class="integral">730</td>
+            <td class="ranking">3</td>
+            <td>刷题高手</td>
+            <td>上等兵</td>
+            <td class="ranking">4</td>
+          </tr>
+          <tr>
+            <td>
+              <img src="../img/class_photo.png" alt="" class="schoolmate">
+            </td>
+            <td>Qweiiadcv</td>
+            <td>
+              <span class="lv">LV 3</span>
+            </td>
+            <td class="integral">730</td>
+            <td class="ranking">3</td>
+            <td>刷题高手</td>
+            <td>上等兵</td>
+            <td class="ranking">4</td>
+          </tr>
+          <tr>
+            <td>
+              <img src="../img/class_photo.png" alt="" class="schoolmate">
+            </td>
+            <td>Qweiiadcv</td>
+            <td>
+              <span class="lv">LV 3</span>
+            </td>
+            <td class="integral">730</td>
+            <td class="ranking">3</td>
+            <td>刷题高手</td>
+            <td>上等兵</td>
+            <td class="ranking">4</td>
+          </tr>
+          <tr>
+            <td>
+              <img src="../img/class_photo.png" alt="" class="schoolmate">
+            </td>
+            <td>Qweiiadcv</td>
+            <td>
+              <span class="lv">LV 3</span>
+            </td>
+            <td class="integral">730</td>
+            <td class="ranking">3</td>
+            <td>刷题高手</td>
+            <td>上等兵</td>
+            <td class="ranking">4</td>
+          </tr>
         </table>
       </div>
     </div>
