--- a/src/html/20_study_test.html
+++ b/src/html/20_study_test.html
@@ -18,8 +18,8 @@
   <meta content="telephone=no, address=no" name="format-detection">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-  <link rel="stylesheet" href="/css/normalize.css">
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="../css/normalize.css">
+  <link rel="stylesheet" href="../css/style.css">
 </head>
 <body class="body-wordfail">
   <!--[if lte IE 9]>
@@ -149,7 +149,7 @@
     </div>
   </div>
   <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
-  <script src="/js/main_wj.js"></script>
+  <script src="../js/main_wj.js"></script>
 </body>
 
 </html>
