--- a/src/html/22_preview.html
+++ b/src/html/22_preview.html
@@ -4,7 +4,7 @@
   <meta content="webkit" name="renderer" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta charset="UTF-8">
-  <title>智学单词-口语训练之词汇</title>
+  <title>智学单词-新句预习</title>
   <meta name="Keywords" content="">
   <meta name="Description" content="">
   <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
@@ -18,7 +18,7 @@
   <link rel="stylesheet" href="/css/normalize.css">
   <link rel="stylesheet" href="/css/style.css">
 </head>
-<body class="body-oralpractice">
+<body class="body-preview">
   <!--[if lte IE 9]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
@@ -29,7 +29,7 @@
       <p class="page-title">
         <a href="javascript:;" class="grey-link">课程中心／</a>
         <a href="javascript:;" class="grey-link">同步课程／</a>
-        <a href="javascript:;" class="normal-link">口语训练之词汇</a>
+        <a href="javascript:;" class="normal-link">新句预习</a>
       </p>
       <div class="practice-wp">
         <div class="summary-wp clearfix">
@@ -49,54 +49,17 @@
           </p>
           <div class="practice-ct">
             <div class="clearfix">
-              <div class="word-left">
-                <p class="word">word</p>
-                <p class="word-cue">[wɜ:d]</p>
-                <p class="word-txt"><span class="word-list">n.</span>单词；话语；诺言；消息；</p>
-                <p class="word-txt"><span class="word-list">vt.</span>措辞，用词；用言语表达；</p>
-                <p class="word-txt"><span class="word-list">vi.</span>讲话；</p>
+              <div class="perview-left">
+                <p class="horn-wp">
+                  <a href="javascript:;" class="horn-a"></a>
+                  <span class="horn-cue">点击或按ctrl重听</span>
+                </p>
+                <p class="en-txt">How are you？</p>
+                <p class="cn-txt">你好吗？</p>
               </div>
-              <div class="opearte-right">
-                <div class="img-wp">
-                  <!-- 录音 start -->
-                  <div class="sound-recod none">
-                    <img src="../img/sound_recod.png" alt="" class="soundrecord-img">
-                    <p class="soundrecord-txt">录音中…</p>
-                  </div>
-                  <!-- 录音 end -->
-                  <!-- 录音分析 start -->
-                  <div class="sound-analyse clearfix">
-                    <img src="" alt="" class="soundanalyse-img">
-                    <p class="soundanalyse-txt">智能AI正在评估您的语音…</p>
-                  </div>
-                  <!-- 录音分析 end -->
-                  <!-- 录音分析 start -->
-                  <div class="sound-result clearfix none">
-                    <img src="../img/result1_icon.png" alt="" class="soundresult-img">
-                    <img src="../img/result2_icon.png" alt="" class="soundresult-img none">
-                    <img src="../img/result3_icon.png" alt="" class="soundresult-img none">
-                    <div class="spundresult-txtwp">
-                      <p class="sound-score"><span class="score">98</span>分</p>
-                      <p class="soundresult-txt">excellent! 你读得太棒了！</p>
-                    </div>
-                  </div>
-                  <!-- 录音分析 end -->
-                </div>
-                <ul class="clearfix btn-ul">
-                  <!-- 高亮显示 给li添加 active 类名 -->
-                  <li class="active">
-                    <a href="javascript:;"></a>
-                    <p class="btn-txt">播放原音</p>
-                  </li>
-                  <li>
-                    <a href="javascript:;"></a>
-                    <p class="btn-txt">录音</p>
-                  </li>
-                  <li>
-                    <a href="javascript:;" class="play"></a>
-                    <p class="btn-txt">播放</p>
-                  </li>
-                </ul>
+              <div class="preview-right">
+                <img src="../img/next_icon.png" alt="" class="next-img">
+                <p class="next-txt">Next</p>
               </div>
             </div>
             <div class="progress-wp">
