--- a/src/html/23_newsetence.html
+++ b/src/html/23_newsetence.html
@@ -4,7 +4,7 @@
   <meta content="webkit" name="renderer" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta charset="UTF-8">
-  <title>智学单词-新句预习</title>
+  <title>智学单词-句子初识</title>
   <meta name="Keywords" content="">
   <meta name="Description" content="">
   <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
@@ -29,7 +29,7 @@
       <p class="page-title">
         <a href="javascript:;" class="grey-link">课程中心／</a>
         <a href="javascript:;" class="grey-link">同步课程／</a>
-        <a href="javascript:;" class="normal-link">新句预习</a>
+        <a href="javascript:;" class="normal-link">句子初识</a>
       </p>
       <div class="practice-wp">
         <div class="summary-wp clearfix">
@@ -55,12 +55,12 @@
                   <span class="horn-cue">点击或按ctrl重听</span>
                 </p>
                 <p class="en-txt">How are you？</p>
-                <p class="cn-txt">你好吗？</p>
               </div>
               <div class="preview-right">
-                <div class="next-wp">
-                  <img src="../img/next_icon.png" alt="" class="next-img">
-                  <p class="next-txt">Next</p>
+                <div class="konw-wp">
+                  <p class="know-txt">认识吗？</p>
+                  <a href="javascript:;" class="yes-btn"></a>
+                  <a href="javascript:;" class="no-btn"></a>
                 </div>
               </div>
             </div>
