--- a/src/html/23_newsetence_2.html
+++ b/src/html/23_newsetence_2.html
@@ -4,7 +4,7 @@
   <meta content="webkit" name="renderer" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta charset="UTF-8">
-  <title>智学单词-新句预习</title>
+  <title>智学单词-句子初识</title>
   <meta name="Keywords" content="">
   <meta name="Description" content="">
   <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
@@ -29,7 +29,7 @@
       <p class="page-title">
         <a href="javascript:;" class="grey-link">课程中心／</a>
         <a href="javascript:;" class="grey-link">同步课程／</a>
-        <a href="javascript:;" class="normal-link">新句预习</a>
+        <a href="javascript:;" class="normal-link">句子初识</a>
       </p>
       <div class="practice-wp">
         <div class="summary-wp clearfix">
@@ -58,9 +58,10 @@
                 <p class="cn-txt">你好吗？</p>
               </div>
               <div class="preview-right">
-                <div class="next-wp">
-                  <img src="../img/next_icon.png" alt="" class="next-img">
-                  <p class="next-txt">Next</p>
+                <div class="correct-wp">
+                  <p class="correct-txt">你的记忆正确吗？</p>
+                  <a href="javascript:;" class="yes-btn"></a>
+                  <a href="javascript:;" class="no-btn"></a>
                 </div>
               </div>
             </div>
