--- a/src/html/27_readText_4.html
+++ b/src/html/27_readText_4.html
@@ -5,7 +5,7 @@
   <meta content="webkit" name="renderer" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta charset="UTF-8">
-  <title>同步课文-看字组句</title>
+  <title>同步课文-默写填空</title>
   <meta name="Keywords" content="">
   <meta name="Description" content="">
   <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
@@ -42,11 +42,11 @@
           <em class="line">/</em>
           <a class="link" href="javscript:;">同步课程</a>
           <em class="line">/</em>
-          <span>看字组句</span>
+          <span>默写填空</span>
         </div>
         <div class="xc-pent">
           <div class="pent-head">
-            <div class="pent-name">同步课文-看字组句</div>
+            <div class="pent-name">同步课文-默写填空</div>
             <div class="pent-name-small">牛津上海版——二年级上册 Unit 1</div>
             <div class="pent-close">
               <img src="../img/readText-close.png" alt="关闭">
@@ -54,18 +54,13 @@
           </div>
           <div class="pent-body">
             <div class="readText-box">
-              <div class="readText-sentence">
-                <div class="readText-listen">
-                  <!-- 再点击时候更换img地址 -->
-                  <!-- <img class="readText-listen-img" src="../img/sentence-radio-active.png" alt="听"> -->
-                  <img class="readText-listen-img" src="../img/sentence-radio.png" alt="听">点击或按ctrl重听
-                </div>
-                <div class="readText-write" id="readText-write"><div class="readText-write-item"><input type="text"/></div><div class="readText-write-item"><input type="text" /></div><div class="readText-write-item"><input type="text" /></div><span class="h1">？</span><span class="readText-write-btn">重置</span></div>
-                <div class="readText-example">
-                  <span class="readText-example-item">you</span>
-                  <span class="readText-example-item">are</span>
-                  <span class="readText-example-item">How</span>
-                </div>
+              <div class="readText-blank" id="readText-blank">
+                <div class="readText-blank-item">Are you <div class="readText-blank-div"><input type="text"/></div> ? </div>
+                <div class="readText-blank-item"><div class="readText-blank-div"><input type="text"/></div> , I am.</div>
+                <div class="readText-blank-item">Nice to <div class="readText-blank-div"><input type="text"/></div> you, Linda. </div>
+                <div class="readText-blank-item">Nice to <div class="readText-blank-div"><input type="text"/></div> you, too. </div>
+                <div class="readText-blank-item">The voyages of ZhengHe</div>
+                <div class="readText-blank-item">Zheng He was a famous Chinese explorer.</div>
               </div>
             </div>
           </div>
@@ -98,7 +93,7 @@
               <li class="readText-pro-item active">课文跟读</li>
               <li class="readText-pro-item active">读意背诵</li>
               <li class="readText-pro-item active">看字组句</li>
-              <li class="readText-pro-item">默写填空</li>
+              <li class="readText-pro-item active">默写填空</li>
             </ul>
           </div>
           <div class="readText-footer-btns two">
