--- a/html/submenu.html
+++ b/html/submenu.html
@@ -18,9 +18,9 @@
    <link rel="stylesheet" href="../js/vendor/whirl/dist/whirl.css">
    <!-- =============== PAGE VENDOR STYLES ===============-->
    <!-- =============== BOOTSTRAP STYLES ===============-->
-   <link rel="stylesheet" hhref="../css/bootstrap.css" id="bscss">
+   <link rel="stylesheet" href="../css/bootstrap.css" id="bscss">
    <!-- =============== APP STYLES ===============-->
-   <link rel="stylesheet" hhref="../css/app.css" id="maincss">
+   <link rel="stylesheet" href="../css/app.css" id="maincss">
 </head>
 
 <body>
@@ -177,19 +177,19 @@
    </div>
    <!-- =============== VENDOR SCRIPTS ===============-->
    <!-- MODERNIZR-->
-   <script src="../vendor/modernizr/modernizr.custom.js"></script>
+   <script src="../js/vendor/modernizr/modernizr.custom.js"></script>
    <!-- JQUERY-->
-   <script src="../vendor/jquery/dist/jquery.js"></script>
+   <script src="../js/vendor/jquery/dist/jquery.js"></script>
    <!-- BOOTSTRAP-->
-   <script src="../vendor/bootstrap/dist/js/bootstrap.js"></script>
+   <script src="../js/vendor/bootstrap/dist/js/bootstrap.js"></script>
    <!-- STORAGE API-->
-   <script src="../vendor/jQuery-Storage-API/jquery.storageapi.js"></script>
+   <script src="../js/vendor/jQuery-Storage-API/jquery.storageapi.js"></script>
    <!-- JQUERY EASING-->
-   <script src="../vendor/jquery.easing/js/jquery.easing.js"></script>
+   <script src="../js/vendor/jquery.easing/js/jquery.easing.js"></script>
    <!-- ANIMO-->
-   <script src="../vendor/animo.js/animo.js"></script>
+   <script src="../js/vendor/animo.js/animo.js"></script>
    <!-- LOCALIZE-->
-   <script src="../vendor/jquery-localize-i18n/dist/jquery.localize.js"></script>
+   <script src="../js/vendor/jquery-localize-i18n/dist/jquery.localize.js"></script>
    <!-- =============== PAGE VENDOR SCRIPTS ===============-->
    <!-- =============== APP SCRIPTS ===============-->
    <script src="../js/app.js"></script>
