--- a/src/html/31_posttest_result.html
+++ b/src/html/31_posttest_result.html
@@ -4,7 +4,7 @@
   <meta content="webkit" name="renderer" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta charset="UTF-8">
-  <title>智学单词-学后智测</title>
+  <title>搞定语法-学后测试</title>
   <meta name="Keywords" content="">
   <meta name="Description" content="">
   <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
@@ -28,8 +28,8 @@
     <div class="main">
       <p class="page-title">
         <a href="javascript:;" class="grey-link">课程中心／</a>
-        <a href="javascript:;" class="grey-link">同步课程／</a>
-        <a href="javascript:;" class="normal-link">学后智测（智学单词）</a>
+        <a href="javascript:;" class="grey-link">搞定语法／</a>
+        <a href="javascript:;" class="normal-link">学后测试</a>
       </p>
       <!-- 失败 start -->
       <div class="result-wp">
@@ -75,73 +75,71 @@
       </div>
       <!-- 成功 end -->
       <div class="part1-wp">
-        <p class="part-title"><span class="titl1">Part 1</span><span class="title2">听音写词</span></p>
+        <p class="part-title"><span class="titl1">Part 1</span><span class="title2">选择题</span></p>
         <p class="success-result">答对：10/10</p>
-        <ul class="part-ul clearfix">
-          <li>
-            <div class="clearfix title-wp">
-              <div class="title">
-                1.<a href="javascript:;" class="horn"><img src="../img/horn_gery.png" alt=""></a>
-                点击播放语音
-              </div>
-              <img src="../img/right_icon.png" alt="" class="right-img">
-            </div>
-            <input class="part-ipt" type="text">
-          </li>
-          <li>
-            <div class="clearfix title-wp">
-              <div class="title">
-                2.<a href="javascript:;" class="horn"><img src="../img/horn_gery.png" alt=""></a>
-                点击播放语音
-              </div>
-              <img src="../img/right_icon.png" alt="" class="right-img">
-            </div>
-            <input class="part-ipt" type="text">
-          </li>
-          <li>
-            <div class="clearfix title-wp">
-              <div class="title">
-                3.<a href="javascript:;" class="horn"><img src="../img/horn_gery.png" alt=""></a>
-                点击播放语音
-              </div>
-              <img src="../img/right_icon.png" alt="" class="right-img">
-            </div>
-            <input class="part-ipt" type="text">
-          </li>
-        </ul>
+        <div class="posttest-part clearfix">
+          <p class="posttest-title"><i class="result-icon result-right-icon"></i>1.word</p>
+          <ul class="posttest-ul">
+            <li class="right-li">
+              <input type="radio" id="q1" name="word" checked>
+              <label for="q1"></label>释义释义释义释义
+            </li>
+            <li>
+              <input type="radio" id="q2" name="word">
+              <label for="q2"></label>释义释义释义释义释义释义释义释义
+            </li>
+            <li>
+              <input type="radio" id="q3" name="word">
+              <label for="q3"></label>释义释义释义释义
+            </li>
+            <li>
+              <input type="radio" id="q4" name="word">
+              <label for="q4"></label>释义释义释义释义释义释义释义释义
+            </li>
+          </ul>
+          <p class="q-explain">解析：解析内容解析内容</p>
+        </div>
+        <div class="posttest-part clearfix">
+          <p class="posttest-title"><i class="result-icon result-fail-icon"></i>2.word</p>
+          <ul class="posttest-ul">
+            <li>
+              <input type="radio" id="q11" name="word2" checked>
+              <label for="q11"></label>释义释义释义释义
+            </li>
+            <li class="right-li">
+              <input type="radio" id="q12" name="word2">
+              <label for="q12"></label>释义释义释义释义释义释义释义释义
+              <i class="result-icon result-right-icon"></i>
+            </li>
+            <li>
+              <input type="radio" id="q13" name="word2">
+              <label for="q13"></label>释义释义释义释义
+            </li>
+            <li>
+              <input type="radio" id="q14" name="word2">
+              <label for="q14"></label>释义释义释义释义释义释义释义释义
+            </li>
+          </ul>
+          <p class="q-explain">解析：解析内容解析内容</p>
+        </div>
       </div>
       <div class="part2-wp">
-        <p class="part-title"><span class="titl1">Part 2</span><span class="title2">看字写词</span></p>
+        <p class="part-title"><span class="titl1">Part 2</span><span class="title2">填空题</span></p>
         <p class="fail-result">答对：10/10</p>
-        <ul class="part-ul clearfix">
-          <li>
-            <div class="clearfix title-wp">
-              <div class="title">
-                1.<span class="txt">释义释义释义释义释义</span>
-              </div>
-              <img src="../img/fail_icon.png" alt="" class="right-img">
-            </div>
-            <input class="part-ipt" type="text">
-          </li>
-          <li>
-            <div class="clearfix title-wp">
-              <div class="title">
-                2.<span class="txt">释义释义释义释义释义</span>
-              </div>
-              <img src="../img/right_icon.png" alt="" class="right-img">
-            </div>
-            <input class="part-ipt" type="text">
-          </li>
-          <li>
-            <div class="clearfix title-wp">
-              <div class="title">
-                3.<span class="txt">释义释义释义释义释义</span>
-              </div>
-              <img src="../img/right_icon.png" alt="" class="right-img">
-            </div>
-            <input class="part-ipt" type="text">
-          </li>
-        </ul>
+        <div class="posttest-part2">
+          <p class="completion">
+            <i class="result-icon result-right-icon"></i>
+            1. 题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干干题干题干题干。
+            <input class="ipt-completion right-completion" value="正确答案" type="text">题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题
+          </p>
+        </div>
+        <div class="posttest-part2">
+          <p class="completion">
+            <i class="result-icon result-fail-icon"></i>
+            1. 题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干干题干题干题干。
+            <input class="ipt-completion fail-completion" value="错误答案" type="text">题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题
+          </p>
+        </div>
       </div>
     </div>
   </div>
