--- a/src/html/页面编号_模板取名.html
+++ b/src/html/页面编号_模板取名.html
@@ -32,6 +32,9 @@
   <!--[if lte IE 9]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
+  <!-- build:head -->
+
+  <!-- endbuild -->
   <div class="wrap">
     <div class="main">
       <!-- 第三步：
@@ -44,7 +47,11 @@
 
   <!-- 第五步：
 			 默认引入JQuery.js、
-			 请在main_你的名称简写.js里面写js代码  -->
+       请在main_你的名称简写.js里面写js代码  -->
+       
+  <!-- build:foot -->
+
+  <!-- endbuild -->
   <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
   <script src="../js/main_你的名称简写.js"></script>
 </body>
