--- a/src/html/27_readText_6.html
+++ b/src/html/27_readText_6.html
@@ -55,15 +55,15 @@
           <div class="pent-body">
             <div class="xc-score">
               <div class="xc-score-body">
-                <img class="xc-score-img" src="../img/xc-score.png" alt="成績">
+                <img class="xc-score-img" src="../img/xc-score-no.png" alt="成績">
                 <div class="xc-score-box">
-                    <h3 class="xc-score-title">恭喜你</h3><br>
-                    <p class="xc-score-tip">恭喜通过默写填空！</p>
-                    <p class="xc-score-number">得分<span class="xc-score-num">80</span></p>
-                    <p class="xc-score-tip">共30题 默写正确18题</p>
+                    <h3 class="xc-score-title">很遗憾</h3><br>
+                    <p class="xc-score-tip">本次测试未通过</p>
+                    <p class="xc-score-number">得分<span class="xc-score-num">40</span></p>
+                    <p class="xc-score-tip">共30题 默写正确12题</p>
                 </div>
               </div>
-              <p class="xc-score-des">虽然通过考试，也要记得巩固复习哦~</p>
+              <p class="xc-score-des">别气馁，快去巩固学习，下一次就能通过测试</p>
             </div>
             <div class="readText-box">
               <div class="readText-blank" id="readText-blank">
