--- a/src/html/28_custom_3.html
+++ b/src/html/28_custom_3.html
@@ -5,7 +5,7 @@
   <meta content="webkit" name="renderer" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta charset="UTF-8">
-  <title>智能闯关-测试成功</title>
+  <title>智能闯关-测试失败</title>
   <meta name="Keywords" content="">
   <meta name="Description" content="">
   <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
@@ -68,31 +68,18 @@
         <div class="coustom-body">
             <div class="xc-score">
               <div class="xc-score-body">
-                <img class="xc-score-img" src="../img/xc-score.png" alt="成績">
+                <img class="xc-score-img" src="../img/xc-score-no.png" alt="成績">
                 <div class="xc-score-box">
-                    <h3 class="xc-score-title">恭喜你</h3><br>
-                    <p class="xc-score-tip">成功通过闯关测验！</p>
-                    <p class="xc-score-number">得分<span class="xc-score-num">100</span></p>
-                    <p class="xc-score-tip">共30题 默写正确30题</p>
+                    <h3 class="xc-score-title">很遗憾</h3><br>
+                    <p class="xc-score-tip">本次测试未通过</p>
+                    <p class="xc-score-number">得分<span class="xc-score-num">40</span></p>
+                    <p class="xc-score-tip">共30题 答对12题</p>
                 </div>
               </div>
-              <p class="xc-score-des">虽然通过考试，也要记得巩固复习哦~</p>
+              <p class="xc-score-des">别气馁，快去巩固学习，下一次就能通过测试~</p>
             </div>
             <div class="coustom-return-box">
-                <a class="coustom-return-link" href="javascript:;">返回继续学习</a>
-            </div>
-            <div class="coustom-currency-box">
-              <div class="coustom-currency">
-                <div class="coustom-currency-left">
-                  <img class="img" src="../img/learnmoney_icon.png" alt="币">
-                  <p class="coustom-currency">学币 +<span>10</span></p>
-                </div>
-                <div class="coustom-currency-right">
-                  <p class="des">你已成功完成</p>
-                  <h2 class="title">牛津上海版——二年级上册 Unit 1</h2>
-                  <p class="des">单词部分的学习</p>
-                </div>
-              </div>
+                <a class="coustom-return-link" href="javascript:;">去巩固学习</a>
             </div>
         </div>
         <div class="xc-pent">
