--- a/src/html/10_test.html
+++ b/src/html/10_test.html
@@ -24,16 +24,35 @@
   <!--[if lte IE 9]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
+  <!-- build:head -->
+  
   <header class="comm-header">
     <div class="midd_header clearfix">
       <div class="index_icon">
         <a href="index.html"></a>
       </div>
+      <ul class="nav clearfix">
+        <li class="active">
+          <a href="#">课程中心</a>
+        </li>
+        <li>
+          <a href="#">我的班级</a>
+        </li>
+        <li>
+          <a href="#">排行榜</a>
+        </li>
+        <li>
+          <a href="#">学币商城</a>
+        </li>
+      </ul>
       <div class="login">
         <a href="#">个人中心</a>
       </div>
     </div>
   </header>
+
+  <!-- endbuild -->
+
   <div class="wrap">
     <div class="main test-main">
       <div class="xc-container">
@@ -477,6 +496,8 @@
     </div>
   </div>
   <!-- 底部 -->
+  <!-- build:foot -->
+    <!-- 底部 -->
   <div class="footer">
     <div class="footer-ct">
       <div class="tel-wp">
@@ -490,6 +511,8 @@
       <p class="record">智厢逢智能英语版权所有 © 备案号备案号备案号备案号</p>
     </div>
   </div>
+  <!-- endbuild -->
+
   <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
   <script src="../js/main_xc.js"></script>
 </body>
